header: styling background image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/Grid.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
@@ -9,8 +10,12 @@
         <title>Omnifood</title>
     </head>
     <body>
-        <div class="row">
-            <h1>Omnifood</h1>
-        </div>
+        <header>
+            <div class="hero-text-box">
+                <h1>Goodbye junk food. Hello super healthy meals.</h1>
+                <a href="#">I’m hungry</a>
+                <a href="#">Show me more</a>
+            </div>
+        </header>
     </body>
 </html>
