--- a/index.html
+++ b/index.html
@@ -242,15 +242,15 @@
                     <div class="plan-box">
                         <div>
                             <h3>Premium</h3>
-                            <p class="plan-price">399$ per month</p>
+                            <p class="plan-price">399$ <span>per month</span></p>
                             <p class="plan-price-meal">That’s only 13.30$ per meal</p>
                         </div>
                         <div>
                             <ul>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>1 meal every day</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Order 24/7</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Access to newest creations</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Free delivery</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>1 meal every day</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Order 24/7</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Access to newest creations</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Free delivery</li>
                             </ul>
                         </div>
                         <div>
@@ -262,15 +262,15 @@
                     <div class="plan-box">
                         <div>
                             <h3>Pro</h3>
-                            <p class="plan-price">149$ per month</p>
+                            <p class="plan-price">149$ <span>per month</span></p>
                             <p class="plan-price-meal">That’s only 14.90$ per meal</p>
                         </div>
                         <div>
                             <ul>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>1 meal 10 days/month</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Order 24/7</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Access to newest creations</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Free delivery</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>1 meal 10 days/month</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Order 24/7</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Access to newest creations</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Free delivery</li>
                             </ul>
                         </div>
                         <div>
@@ -282,13 +282,15 @@
                     <div class="plan-box">
                         <div>
                             <h3>Starter</h3>
-                            <p class="plan-price">19$ per meal</p>
+                            <p class="plan-price">19$ <span>per month</span></p>
+                            <p class="plan-price-meal">&nbsp;</p>
                         </div>
                         <div>
                             <ul>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>1 meal</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Order from 8 am to 12 pm</li>
-                                <li><ion-icon name="checkmark-circle"></ion-icon>Free delivery</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>1 meal</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Order from 8 am to 12 pm</li>
+                                <li><ion-icon class="icon-small" name="checkmark"></ion-icon>Free delivery</li>
+                                <li>&nbsp;</li>
                             </ul>
                         </div>
                         <div>
