supporting different and older browsers

--- a/index.html
+++ b/index.html
@@ -392,5 +392,11 @@
         </footer>
 
         <script src="https://unpkg.com/ionicons@4.4.6/dist/ionicons.js"></script>
+        
+        <!-- old browser support -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+
     </body>
 </html>
