--- a/index.html
+++ b/index.html
@@ -392,7 +392,9 @@
         </footer>
 
         <script src="https://unpkg.com/ionicons@4.4.6/dist/ionicons.js"></script>
-        
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="resources/js/script.js"></script>
+
         <!-- old browser support -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
