--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     </head>
     <body>
         <header>
-            <nav>
+            <nav class="sticky">
                 <div class="row">
                     <img class="logo" src="resources/img/logo-white.png" alt="Omnifood logo">
+                    <img class="logo-black" src="resources/img/logo.png" alt="Omnifood logo">
                     <ul class="main-nav">
                         <li><a href="#">Food delivery</a></li>
                         <li><a href="#">How it works</a></li>
@@ -31,7 +32,7 @@
             </div>
         </header>
 
-        <section class="section-features">
+        <section class="section-features js--section-features">
             <div class="row">
                 <h2>Get food fast &mdash; not fast food</h2>
                 <p class="long-copy">
@@ -393,6 +394,7 @@
 
         <script src="https://unpkg.com/ionicons@4.4.6/dist/ionicons.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="vendors/js/jquery.waypoints.min.js"></script>
         <script src="resources/js/script.js"></script>
 
         <!-- old browser support -->
